css/style.css
/* =============================================================================
HTML5 CSS Reset Minified
========================================================================== */

html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
body{line-height:1}
article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
nav ul{list-style:none}
blockquote,q{quotes:none}
blockquote:before,blockquote:after,q:before,q:after{content:none}
a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent;text-decoration:none}
mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}
del{text-decoration:line-through}
abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}
table{border-collapse:collapse;border-spacing:0}
hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}
input,select{vertical-align:middle}
li{list-style:none}


/* =============================================================================
CSS
========================================================================== */

/* ---- base ---- */

html,body{
    width: 100%;
    height: 100%;
    background: linear-gradient(to bottom right, #010220, #174982, #290b35);
    box-sizing: border-box;
}

html{
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

body{
    font-family: 'Oswald', sans-serif;
    -webkit-font-smoothing: antialiased;
}

canvas{
    display:block;
    vertical-align:bottom;
}

a {
    border-bottom: dotted 1px rgba(255, 255, 255, 0.5);
    color: #c4dff7;
    font-size: 16px;
    text-decoration: none;
    transition: border 0.25s ease-in;
}

a:hover {
    border-bottom: dotted 1px rgba(255, 255, 255, 0);
}

.header {
    height: 100vh;
    width: 100%;
    position: relative;
}

/* ---- symbol---- */

.phi-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    align-content: center;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    z-index: 100;
    position: absolute;
}

.phi {
    width: 30%;
    max-width: 250px;
    filter: drop-shadow(0px 0px 5px #d4eaff);
    transition: width 0.5s ease-in;
}

@media (max-width: 600px) {
    .phi {
        filter: drop-shadow(0px 0px 3px #d4eaff);
        width: 60%;
    }
}

.phi-symbol {
    fill: #192948;
}


/* ---- clouds---- */

.clouds {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
}

.cloud {
    background-color: transparent;
    background-size: cover;
    width: 100%;
    height: 100%;
    position: absolute;
    opacity: 0.5;
    z-index: 200;
}

.cloud-1 {
    background-image: url(../img/cloud-1.png);
}

.cloud-2 {
    background-image: url(../img/cloud-2.png);
}

.cloud-3 {
    background-image: url(../img/cloud-3.png);
}

.cloud-4 {
    background-image: url(../img/cloud-4.png);
}

.cloud-5 {
    background-image: url(../img/cloud-5.png);
}


/* ---- scroll---- */

.scroll {
  box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.2);
  border-radius: 100px;
  position: absolute;
  bottom: 20px;
  height: 40px;
  width: 20px;
  margin: 0 auto;
  left: 0;
  right: 0;
}
.scroll:before,
.scroll:after {
  animation: mouse-wheel 2s ease-in-out infinite;
  background: #fff;
  border-radius: 100px;
  content: '';
  height: 4px;
  width: 4px;
  opacity: 0;
  position: absolute;
  left: 8px;
  top: 15px;
}
.scroll:after {
  animation-delay: 1s;
}

@keyframes mouse-wheel {
  0% {
    transform: translateY(-16px);
  }
  50% {
    opacity: 1;
    transform: translateY(0);
  }
  100% {
    transform: translateY(16px);
  }
}


/* ---- particles ---- */

#particles-js{
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    background-color: transparent;
    background-image: url('');
    background-size: cover;
    background-position: 50% 50%;
    background-repeat: no-repeat;
    z-index: 300;
}


/* ---- content ---- */

.content {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
    background: #111111;
    position: absolute;
    width: 100%;
    z-index: 500;
}

.info-wrapper {
    width: 600px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    flex-grow: 1;
    padding: 100px 0;
}

@media (max-width: 600px) {
    .info-wrapper {
        width: 100%;
    }
}

.info-header {
    font-size: 40px;
    color: #6d6d6d;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 6px;
}

.info-subheader {
    margin-top: 20px;
    text-align: center;
    text-transform: uppercase;
    color: #6d6d6d;
}

.info-subheader a{
    color: #6d6d6d;
}

.newsletter-wrapper {
    display: flex;
    background: #050505;
    justify-content: center;
    align-items: center;
    width: 100%;
    flex-grow: 1;
    padding: 100px 0;
}

@media (max-width: 600px) {
    .newsletter-wrapper-wrapper {
        width: 100%;
    }
}

.newsletter-subheader {
    margin-bottom: 20px;
    text-align: center;
    text-transform: uppercase;
    color: #6d6d6d;
}

.newsletter-input {
    height: 50px;
    border: rgba(255,255,255, 0.2);
    outline: none;
    box-shadow: none;
    -webkit-appearance: none;
    background: #111111;
    padding: 0 20px;
    width: 300px;
    font-size: 14px;
    color: white;
    text-transform: uppercase;
    font-family: 'Oswald', sans-serif;
}

.newsletter-button {
    height: 50px;
    width: 50px;
    outline: none;
    box-shadow: none;
    -webkit-appearance: none;
    border: 0;
    color: #050505;
    background: #6d6d6d;
    font-size: 20px;
    font-family: 'times', serif;
    cursor: pointer;
}

.newsletter-button:hover {
    background: #111111;
    color: #6D6D6D;
    transition: all 0.25s ease-in;
}

::-webkit-input-placeholder {
    color: #6d6d6d;
}

